--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <header>
-      <img class="img-logo" src="public\header-hp-overlay.png" alt="Harry Potter">
+      <img class="img-logo" src="/header-hp-overlay.png" alt="Harry Potter">
     </header>
     
     <div id="div1">
